cabal-version:      3.0
name:               Zero
version:            0.0.0.0
license:            MIT
license-file:       LICENSE
author:             jrvieira
maintainer:         github@jrvieira.com
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:  Zero
      , Zero.Color
      , Zero.Draw
      , Zero.Echo
      , Zero.Queue
      , Zero.Shut

    -- other-modules:

    -- other-extensions:

    build-depends:    base ^>=4.18.0.0
      , containers

    hs-source-dirs:   src

    default-language: GHC2021
